<resources>
    <string name="app_name">contacts</string>
    <string name="settings">settings</string>
    <string name="decrypt">decrypt</string>
    <string name="encrypt">encrypt</string>
    <string name="do_not_encrypt">don\'t encrypt</string>
    <string name="password">password</string>
    <string name="generate">generate</string>
    <string name="call">call</string>
    <string name="sms" translatable="false">sms</string>
    <string name="first">first </string>
    <string name="middle">middle</string>
    <string name="last">last</string>
    <string name="name" translatable="false">name</string>
    <string name="birthday">birthday</string>
    <string name="street">street</string>
    <string name="hnr" translatable="false">hnr</string>
    <string name="house_number">house number</string>
    <string name="house_nr">house nr</string>
    <string name="postal_code">postal code</string>
    <string name="postal">postal</string>
    <string name="city">city</string>
    <string name="notes">notes</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="sync" translatable="false">sync</string>
    <string name="discover">discover</string>
    <string name="show">show</string>
    <string name="addresses">addresses</string>
    <string name="phone_numbers">phone numbers</string>
    <string name="email_addresses">email addresses</string>
    <string name="phone_number">phone number</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="email" translatable="false">email</string>
    <string name="interactive">interactive</string>
    <string name="sync_question">sync contacts with this device?</string>
    <string name="is_host">is host</string>
    <string name="ok" translatable="false">ok</string>
    <string name="host_server">host server</string>
    <string name="could_not_create_server">could not create server</string>
    <string name="created_server">created_server</string>
    <string name="no_bluetooth_support">this device does not support bluetooth</string>
    <string name="unable_sync_contacts">without bluetooth you will not be able to synchronize your contacts between your devices</string>
    <string name="sending">sending</string>
    <string name="receiving">receiving</string>
    <string name="no_contacts_received">no contacts received</string>
    <string name="import_">import</string>
    <string name="message_contacts_look_empty">it does seem like you do not have any contacts in his database. do you want to import from your contacts app?</string>
    <string name="warning">warning!</string>
    <string name="message_data_will_not_be_encrypted">all entered data will not be encrypted</string>
    <string name="i_understand">i understand</string>
    <string name="let_me_enter_a_password">let me enter a password</string>
    <string name="no_password_entered">no password entered</string>
    <string name="password_length_must_be_smaller_32">password length must be smaller than 64 chars</string>
    <string name="choose_number">choose number</string>
    <string name="contacts">contacts</string>
    <string name="vcf_file">vcf file</string>
    <string name="csv_file">csv file</string>
    <string name="permission_not_granted">permission not granted</string>
</resources>
