<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="64dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_sms"
        android:layout_alignBaseline="@id/btn_call"
        android:layout_toStartOf="@id/btn_call"
        android:layout_marginEnd="8dp"
        android:text="@string/sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_call"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:text="@string/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_delete"
        android:text="@string/delete"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:background="@color/red"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_alignBaseline="@id/btn_delete"
        android:layout_toStartOf="@id/btn_delete"
        android:text="@string/edit"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>