<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_question"
                android:text="@string/sync_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/cb_encrypt"
                android:layout_below="@id/tv_question"
                android:text="@string/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_below="@id/cb_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/cb_interactive"
                android:layout_below="@+id/et_password"
                android:text="@string/interactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>