<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_width="128dp"
        android:layout_height="128dp"/>

    <RelativeLayout
        android:layout_below="@id/iv_picture"
        android:id="@+id/rl_detail"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_lbl_name"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_firstName"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:layout_below="@id/tv_lbl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_middleName"
            android:hint="@string/middle"
            android:inputType="textPersonName"
            android:layout_below="@id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_lastName"
            android:hint="@string/last"
            android:inputType="textPersonName"
            android:layout_below="@id/et_middleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_lbl_birthday"
            android:layout_marginTop="8dp"
            android:labelFor="@id/et_birthDay"
            android:text="@string/birthday"
            android:layout_below="@id/et_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_birthDay"
            android:layout_below="@id/tv_lbl_birthday"
            android:hint="@string/birthday"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_below="@id/rl_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_address"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/baseline_add_white_48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>